Finally fix spacing issues for input and options/conatiner.

--- a/style.css
+++ b/style.css
@@ -298,21 +298,26 @@ h2{
 	}
 
 	.input{
+		flex: none;
 		width: 100%;
 		height: 35px;
 		overflow: hidden;
 		white-space: nowrap;
+		margin: 0;
+		margin-right: auto;
+		margin-left: auto;
 	}
 
 		input{
-			display: inline-block;
+			flex: none;
+			display: block;
 			width: 66%;
-			height: 82%;
+			height: 100%;
 			border-radius: 0 0 0 15px;
 			box-shadow: none;
 			border-bottom: 5px solid #000;
-			margin-right: 0;
-			padding-right: 0;
+			float: left;
+			box-sizing: border-box;
 		}
 
 		input:focus{
@@ -321,16 +326,19 @@ h2{
 		}
 
 		button{
-			display: inline-block;
+			flex: none;
+			display: block;
 			width: 34%;
 			height: 100%;
 			border-radius: 0 15px 0 0;
-			margin-left: 0;
-			padding-left: 0;
 			box-shadow: none;
 			border-bottom: 5px solid #FFF;
 			border-left: none;
 			border-right: none;
+			padding: 0;
+			margin: 0;
+			float: left;
+			box-sizing: border-box;
 		}
 
 		button:hover{
@@ -346,7 +354,7 @@ h2{
 	}
 
 	h2{
-		visibility: hidden;
+		display: none;
 	}
 
 	.visitor{
@@ -373,8 +381,6 @@ h2{
 		margin: auto;
 		overflow: hidden;
 		white-space: nowrap;
-		margin-bottom: 0;
-		padding-bottom: 0;
 	}
 
 		.options button{
@@ -397,6 +403,9 @@ h2{
 			width: 34%;
 			position: relative;
 			margin: auto;
+			padding-left: auto;
+			padding-right: auto;
+			float: none;
 		}
 		
 		.ufb{
@@ -413,8 +422,6 @@ h2{
 		bottom: 0;
 		width: 100%;
 		background-color: rgba(250, 250, 250, 0.8);
-		margin-top: 0;
-		padding-top: 0;
 	}
 
 		.left{
@@ -502,7 +509,7 @@ h2{
 
 				.person{
 					height: 80px;
-					overflow: hidden;
+					overflow: auto;
 					white-space: nowrap;
 				}
 
